--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -8,6 +8,6 @@
 {% include head-custom-google-tag-manager.html %}
 
 <!-- You can set your favicon here -->
-<!-- link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}" -->
+<link rel="shortcut icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 
 <!-- end custom head snippets -->
